@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-11T00:48:56Z",
-  "count_outdated" : 194,
-  "uniques_outdated" : 167,
-  "count" : 208,
-  "uniques" : 179,
+  "timestamp" : "2023-10-11T08:14:03Z",
+  "count_outdated" : 195,
+  "uniques_outdated" : 168,
+  "count" : 209,
+  "uniques" : 180,
   "clones" : [
-    {
-      "timestamp": "2023-09-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-29T00:00:00Z",
       "count": 1,
@@ -85,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
