@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2023-09-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-29T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -46,6 +41,11 @@
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
